tdf#168265: pass comment (999) section to detect dxf file

Change-Id: I6d54e4dcc578792bd122e24743f41c0049974a2a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190632
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit b5044aa84af207dc44944c9ad51847b50e7f43b1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190653
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>